# CoreMess

./: .gitignore  CMakeLists.txt  README.md  code_line  utils
src/: Makefile  module_test.c  module_test.h  new_structures.h
src/include/: config.h  new_structures.h
src/service/: Makefile  module_mess.c  module_messy.c  module_messy.h  module_test.c  module_test.h  set_module_params.sh  utils
src/users/: Makefile  create_new_node.sh  reader.c  writer.c
src/users/test/: 1_write_read_test.c  2_defwrite_read_test.c  3_defread_write_test.c  4_rekove_messages_test.c  5_flushing_defworks_test.c  6_multi_readers_writers_test.c  multi_readers_writers.c  multi_readers_writers_test.c  test_conf.h
users/: reader.c  writer.c
